--- a/GcpLogging/appsettings.Development.json
+++ b/GcpLogging/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "GcpLoggingContext": "Host=host.docker.internal;Database=GcpLogging;Username=postgres;Password=123456"
+    "GcpLoggingContext": "Host=localhost;Database=GcpLogging;Username=postgres;Password=123456"
   }
 }
